Migration to JDK 17.