@@ -1,3 +1,6 @@
+import java.util.stream.Collectors
+import java.util.stream.Stream
+
 plugins {
     id("java")
     id("checkstyle")
@@ -6,13 +9,14 @@ plugins {
 
 dependencies {
 
+    compileOnly("org.objenesis:objenesis:3.3")
     implementation(project(":jdk8"))
 
     testImplementation(testFixtures(project(":jdk8")))
     testImplementation("org.hamcrest:hamcrest:2.2")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.9.0")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
 
-    jmh("com.esotericsoftware:kryo:5.3.0")
+    jmh("com.esotericsoftware:kryo:5.5.0")
     jmh("io.github.kostaskougios:cloning:1.10.3")
 
 }
@@ -22,9 +26,20 @@ tasks.withType<JavaCompile> {
     targetCompatibility = JavaVersion.VERSION_1_9.toString()
 }
 
+val jvmModuleOpens =
+    listOf("java.base/java.lang", "java.base/java.lang.invoke", "java.base/java.util", "java.base/java.util.concurrent")
+        .stream()
+        .flatMap { Stream.of("--add-opens", "${it}=ALL-UNNAMED") }
+        .collect(Collectors.toList())
+
 tasks.named<Test>("test") {
     useJUnitPlatform()
     maxHeapSize = "1g"
+    jvmArgs(jvmModuleOpens)
+}
+
+jmh {
+    jvmArgs = jvmModuleOpens
 }
 
 checkstyle {
